--- a/01-testpipeline.yml
+++ b/01-testpipeline.yml
@@ -6,14 +6,14 @@
 trigger:
 - main
 
-strategy:
-  matrix:
-    linux:
-      imageName: "ubuntu-latest"
-    # mac:
-    #   imageName: "macOS-latest"
-    windows:
-      imageName: "windows-latest"
+# strategy:
+#   matrix:
+#     linux:
+#       imageName: "ubuntu-latest"
+#     # mac:
+#     #   imageName: "macOS-latest"
+#     windows:
+#       imageName: "windows-latest"
   # maxParallel: 2
 
 pool:
