--- a/01-testpipeline.yml
+++ b/01-testpipeline.yml
@@ -16,8 +16,8 @@ trigger:
 #       imageName: "windows-latest"
   # maxParallel: 2
 
-pool:
-  vmImage: $(imageName)
+# pool:
+#   vmImage: $(imageName)
 
 # pool:
 #   vmImage: ubuntu-latest
