--- a/01-testpipeline.yml
+++ b/01-testpipeline.yml
@@ -19,17 +19,25 @@ trigger:
 # pool:
 #   vmImage: $(imageName)
 
-# pool:
-#   vmImage: ubuntu-latest
+pool:
+  vmImage: windows-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: CmdLine@2
+  inputs:
+    script: |
+      echo Hello India I love you
+      
+      echo Hello world
+# steps:
+# - script: echo Hello, world!
+#   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+# - script: |
+#     echo Add other tasks to build, test, and deploy your project.
+#     echo See https://aka.ms/yaml
+#   displayName: 'Run a multi-line script'
+  
 # steps:
 #  - task: Maven@4
 #    inputs:
